--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -224,8 +224,10 @@
 
     <Button
         android:id="@+id/Next"
-        android:layout_width="392dp"
-        android:layout_height="49dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
         android:text="Map"
         app:layout_constraintBottom_toTopOf="@+id/changeProfile"
